[package]
name = "CyberCook"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.11" }
anyhow = "1"
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
strum = "0.26"
strum_macros = "0.26"

# encoding
base64 = "0.22"
hex = "0.4.3"

# crypto
aes = "0.8"
block-padding = "0.3"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
ecb = { version = "0.1", features = ["alloc", "block-padding"] }

[dependencies.eframe]
version = "0.29"
features = ["default"]

[dependencies.egui_extras]
version = "0.29"
features = ["default"]
